--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ReynaldiRepo</title>
 </head>
 <body>
+    Rediredcting to "https://reynaldirepo.vercel.app/"
     <script>
         location.href = "https://reynaldirepo.vercel.app/";
     </script>
